--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -3595,9 +3595,9 @@ jobs:
                     throw new Error("GH_TOKEN or GITHUB_TOKEN is required to assign agents");
                   }
                   core.info(`Using token to assign agent (GH_TOKEN: ${process.env.GH_TOKEN ? "yes" : "no"}, GITHUB_TOKEN: ${process.env.GITHUB_TOKEN ? "yes" : "no"})`);
-                  await exec.exec("gh", ["issue", "edit", String(issueNumber), "--add-assignee", `@${agentName}`], {
+                  const repoSlug = `${targetOwner}/${targetRepo}`;
+                  await exec.exec("gh", ["issue", "edit", String(issueNumber), "--repo", repoSlug, "--add-assignee", `@${agentName}`], {
                     env: { ...process.env, GH_TOKEN: ghToken, GITHUB_TOKEN: ghToken },
-                    cwd: process.env.GITHUB_WORKSPACE || process.cwd(),
                   });
                   const mentionText = `@${agentName}`;
                   const commentBody = `${mentionText} has been assigned to this issue.`;
