--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -3594,11 +3594,24 @@ jobs:
                     core.error(`Token check failed - GH_TOKEN: ${process.env.GH_TOKEN ? "set" : "not set"}, GITHUB_TOKEN: ${process.env.GITHUB_TOKEN ? "set" : "not set"}`);
                     throw new Error("GH_TOKEN or GITHUB_TOKEN is required to assign agents");
                   }
-                  core.info(`Using token to assign agent (GH_TOKEN: ${process.env.GH_TOKEN ? "yes" : "no"}, GITHUB_TOKEN: ${process.env.GITHUB_TOKEN ? "yes" : "no"})`);
-                  const repoSlug = `${targetOwner}/${targetRepo}`;
-                  await exec.exec("gh", ["issue", "edit", String(issueNumber), "--repo", repoSlug, "--add-assignee", `@${agentName}`], {
-                    env: { ...process.env, GH_TOKEN: ghToken, GITHUB_TOKEN: ghToken },
-                  });
+                  core.info(`Attempting to assign agent "${agentName}" to issue #${issueNumber}`);
+                  const assigneeToAdd = agentName === "copilot" ? "copilot" : agentName;
+                  try {
+                    await github.rest.issues.addAssignees({
+                      owner: targetOwner,
+                      repo: targetRepo,
+                      issue_number: issueNumber,
+                      assignees: [assigneeToAdd],
+                    });
+                  } catch (apiError) {
+                    const apiErrorMsg = apiError instanceof Error ? apiError.message : String(apiError);
+                    core.warning(`GitHub API assignment failed: ${apiErrorMsg}`);
+                    core.info("Attempting fallback to gh CLI...");
+                    const repoSlug = `${targetOwner}/${targetRepo}`;
+                    await exec.exec("gh", ["issue", "edit", String(issueNumber), "--repo", repoSlug, "--add-assignee", `@${agentName}`], {
+                      env: { ...process.env, GH_TOKEN: ghToken, GITHUB_TOKEN: ghToken },
+                    });
+                  }
                   const mentionText = `@${agentName}`;
                   const commentBody = `${mentionText} has been assigned to this issue.`;
                   await github.rest.issues.createComment({
