--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -53,9 +53,10 @@ name: "Test Assign to Agent"
         type: string
 
 permissions:
-  contents: read
+  actions: write
+  contents: write
   issues: write
-  pull-requests: read
+  pull-requests: write
 
 concurrency:
   group: "gh-aw-${{ github.workflow }}-${{ github.event.issue.number }}"
@@ -165,9 +166,10 @@ jobs:
     needs: activation
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      actions: write
+      contents: write
       issues: write
-      pull-requests: read
+      pull-requests: write
     env:
       GH_AW_SAFE_OUTPUTS: /tmp/gh-aw/safeoutputs/outputs.jsonl
     outputs:
