--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -51,30 +51,12 @@
 #
 # ## Task
 #
-# You are testing the assign_to_agent feature. Based on the trigger:
+# Output the assign_to_agent JSON only. Do not use GitHub tools or perform any operations yourself.
 #
 # **For workflow_dispatch:**
-# - Assign agent "copilot" to issue #${{ github.event.inputs.issue_number }}
+# Output: `{"type": "assign_to_agent", "issue_number": ${{ github.event.inputs.issue_number }}, "agent": "copilot"}`
 #
-# **For issue labeled events:**
-# - If the issue has label "needs-agent", assign agent "copilot" to issue #${{ github.event.issue.number }}
-# - If the issue has label "needs-review", assign agent "code-reviewer" to issue #${{ github.event.issue.number }}
-#
-# Use the `assign_to_agent` safe output with the following structure:
-# ```json
-# {
-#   "type": "assign_to_agent",
-#   "issue_number": <number>,
-#   "agent": "<agent-name>"
-# }
-# ```
-#
-# **Important notes:**
-# - `issue_number` is REQUIRED (will fail validation if missing)
-# - `agent` is optional (defaults to "copilot" if not provided)
-# - Only provide valid issue numbers from this repository
-#
-# After assigning, create a comment summarizing what you did.
+# The safe output script will handle the actual assignment.
 # ```
 #
 # Pinned GitHub Actions:
@@ -936,30 +918,12 @@ jobs:
           
           ## Task
           
-          You are testing the assign_to_agent feature. Based on the trigger:
+          Output the assign_to_agent JSON only. Do not use GitHub tools or perform any operations yourself.
           
           **For workflow_dispatch:**
-          - Assign agent "copilot" to issue #${GH_AW_EXPR_7AE1A017}
+          Output: `{"type": "assign_to_agent", "issue_number": ${GH_AW_EXPR_7AE1A017}, "agent": "copilot"}`
           
-          **For issue labeled events:**
-          - If the issue has label "needs-agent", assign agent "copilot" to issue #${GH_AW_EXPR_9C6DBB26}
-          - If the issue has label "needs-review", assign agent "code-reviewer" to issue #${GH_AW_EXPR_9C6DBB26}
-          
-          Use the `assign_to_agent` safe output with the following structure:
-          ```json
-          {
-            "type": "assign_to_agent",
-            "issue_number": <number>,
-            "agent": "<agent-name>"
-          }
-          ```
-          
-          **Important notes:**
-          - `issue_number` is REQUIRED (will fail validation if missing)
-          - `agent` is optional (defaults to "copilot" if not provided)
-          - Only provide valid issue numbers from this repository
-          
-          After assigning, create a comment summarizing what you did.
+          The safe output script will handle the actual assignment.
           
           PROMPT_EOF
       - name: Append XPIA security instructions to prompt
@@ -1067,7 +1031,6 @@ jobs:
         env:
           GH_AW_PROMPT: /tmp/gh-aw/aw-prompts/prompt.txt
           GH_AW_EXPR_7AE1A017: ${{ github.event.inputs.issue_number }}
-          GH_AW_EXPR_9C6DBB26: ${{ github.event.issue.number }}
         with:
           script: |
             const fs = require("fs");
