--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -51,12 +51,10 @@
 #
 # ## Task
 #
-# Output the assign_to_agent JSON only. Do not use GitHub tools or perform any operations yourself.
-#
 # **For workflow_dispatch:**
-# Output: `{"type": "assign_to_agent", "issue_number": ${{ github.event.inputs.issue_number }}, "agent": "copilot"}`
+# Assign the Copilot agent to issue #${{ github.event.inputs.issue_number }} using the `assign_to_agent` tool from the `safeoutputs` MCP server.
 #
-# The safe output script will handle the actual assignment.
+# Do not use GitHub tools. The assign_to_agent tool will handle the actual assignment.
 # ```
 #
 # Pinned GitHub Actions:
@@ -929,12 +927,10 @@ jobs:
           
           ## Task
           
-          Output the assign_to_agent JSON only. Do not use GitHub tools or perform any operations yourself.
-          
           **For workflow_dispatch:**
-          Output: `{"type": "assign_to_agent", "issue_number": ${GH_AW_EXPR_7AE1A017}, "agent": "copilot"}`
+          Assign the Copilot agent to issue #${GH_AW_EXPR_7AE1A017} using the `assign_to_agent` tool from the `safeoutputs` MCP server.
           
-          The safe output script will handle the actual assignment.
+          Do not use GitHub tools. The assign_to_agent tool will handle the actual assignment.
           
           PROMPT_EOF
       - name: Append XPIA security instructions to prompt
