--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -989,9 +989,13 @@ jobs:
           
           ---
           
-          ## Reporting Missing Tools or Functionality
+          ## Assigning Agents to Issues, Reporting Missing Tools or Functionality
           
           **IMPORTANT**: To do the actions mentioned in the header of this section, use the **safeoutputs** tools, do NOT attempt to use `gh`, do NOT attempt to use the GitHub API. You don't have write access to the GitHub repo.
+          
+          **Assigning Agents to Issues**
+          
+          To assign a GitHub Copilot agent to an issue, use the assign-to-agent tool from safeoutputs
           
           **Reporting Missing Tools or Functionality**
           
