--- a/.github/workflows/test-assign-to-agent.lock.yml
+++ b/.github/workflows/test-assign-to-agent.lock.yml
@@ -3498,8 +3498,10 @@ jobs:
       (needs.detection.outputs.success == 'true')
     runs-on: ubuntu-slim
     permissions:
-      contents: read
+      actions: write
+      contents: write
       issues: write
+      pull-requests: write
     timeout-minutes: 10
     outputs:
       assigned_agents: ${{ steps.assign_to_agent.outputs.assigned_agents }}
